--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div id="tab-commands" class="tab-content hidden">
                     <div class="card">
                         <h3 class="text-xl font-semibold mb-4 text-white">Execute Command (ER:LC API)</h3>
-                        <p class="text-slate-400 mb-4 text-sm">Enter a command to execute on the ER:LC server. (Note: The API Key for this server is retrieved from Firebase.)</p>
+                        <p class="text-slate-400 mb-4 text-sm">Enter a command to execute on the ER:LC server. (Note: This is a simulated backend integration. Real integration requires a backend to use the API Key securely.)</p>
                         <div class="flex gap-2">
                             <input type="text" id="command-input" placeholder="e.g., :kick PlayerName" class="form-input">
                             <button id="execute-command-button" class="btn btn-primary">Execute</button>
@@ -608,6 +608,48 @@
                         console.error(`Error during ER:LC API call to ${endpoint}:`, error);
                         ZappyApp.panel.appendLog(`[ERROR] API Call Error to ${endpoint}: ${error.message}`);
                         throw error; // Re-throw to be caught by the calling function for UI updates
+                    }
+                },
+
+                /**
+                 * Makes a direct fetch call to the Gemini API for structured JSON data.
+                 *
+                 * @param {string} prompt - The prompt to send to Gemini.
+                 * @param {object} schema - The JSON schema for the desired response.
+                 * @returns {Promise<object|null>} The parsed JSON response or null on error.
+                 */
+                async _callGeminiAPI(prompt, schema) {
+                    let chatHistory = [];
+                    chatHistory.push({ role: "user", parts: [{ text: prompt }] });
+                    const payload = {
+                        contents: chatHistory,
+                        generationConfig: {
+                            responseMimeType: "application/json",
+                            responseSchema: schema
+                        }
+                    };
+                    const apiKey = ""; // Canvas will automatically provide this in runtime
+                    const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
+
+                    try {
+                        const response = await fetch(apiUrl, {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify(payload)
+                        });
+                        const result = await response.json();
+                        if (result.candidates && result.candidates.length > 0 &&
+                            result.candidates[0].content && result.candidates[0].content.parts &&
+                            result.candidates[0].content.parts.length > 0) {
+                            const json = result.candidates[0].content.parts[0].text;
+                            return JSON.parse(json);
+                        } else {
+                            console.error("Gemini API returned an unexpected structure:", result);
+                            return null;
+                        }
+                    } catch (error) {
+                        console.error("Error calling Gemini API:", error);
+                        return null;
                     }
                 }
             },
